# osgall

./: android.toolchain.cmake  build.py  buildall.bat  clear.py  common.py  make_ndk_standalone.py  prebuild.py  prebuild_boost.py  prebuild_ffmpeg.py  prebuild_opencv.py  prebuild_osg.py  prebuild_osgbullet.py  prebuild_osgearth.py  prebuild_pcl.py  prebuild_vtk.py  readme.md  readme.txt  setup_ndk_standalone.sh
csm/: .gitignore  (+10 more)
prebuild/OpenCTM-1.0.3/: CMakeLists.txt
prebuild/bzip2-1.0.8/: CMakeLists.txt
prebuild/crunch-master/: CMakeLists.txt  license.txt
prebuild/crunch-master/crnlib/: CMakeLists.txt  crn_core.cpp  crn_image_utils.cpp  crnlib.cpp
prebuild/crunch-master/crunch/: crunch.cpp
prebuild/crunch-master/example1/: example1.cpp
prebuild/crunch-master/example2/: example2.cpp
prebuild/crunch-master/example3/: example3.cpp
prebuild/crunch-master/inc/: crn_decomp.h
prebuild/gdal/gdal/: CMakeLists.txt  VERSION
prebuild/gdal/gdal/alg/: CMakeLists.txt
prebuild/gdal/gdal/apps/: CMakeLists.txt
prebuild/gdal/gdal/cmake/: Findgeotiff.cmake  app.cmake  cpl_config.h.emcc.cmake  cpl_config.h.ndk.cmake  cpl_config.h.vc.cmake
prebuild/gdal/gdal/frmts/: CMakeLists.txt
prebuild/gdal/gdal/frmts/derived/: CMakeLists.txt
prebuild/gdal/gdal/frmts/gtiff/: CMakeLists.txt
prebuild/gdal/gdal/frmts/jpeg/: CMakeLists.txt
prebuild/gdal/gdal/frmts/png/: CMakeLists.txt
prebuild/gdal/gdal/frmts/raw/: CMakeLists.txt
prebuild/gdal/gdal/frmts/vrt/: CMakeLists.txt
prebuild/gdal/gdal/gcore/: .gitignore  CMakeLists.txt  gdal_def.h
prebuild/gdal/gdal/gcore/mdreader/: CMakeLists.txt
prebuild/gdal/gdal/gnm/: CMakeLists.txt
prebuild/gdal/gdal/ogr/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/aeronavfaa/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/amigocloud/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/arcgen/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/arcobjects/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/avc/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/bna/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/cad/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/carto/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/cloudant/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/couchdb/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/csv/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/csw/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/db2/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/dgn/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/dods/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/dwg/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/dxf/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/edigeo/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/elastic/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/filegdb/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/fme/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/geoconcept/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/geojson/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/geomedia/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/georss/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gft/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gml/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gmlas/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gmt/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gpkg/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gpsbabel/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/grass/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/gtm/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/htf/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/idb/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/idrisi/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/ili/: CMakeLists.txt
prebuild/gdal/gdal/ogr/ogrsf_frmts/ingres/: CMakeLists.txt
prebuild/gdal/gdal/port/: CMakeLists.txt  cpl_error.cpp  cpl_recode_iconv.cpp
prebuild/giflib-5.1.4/: CMakeLists.txt
prebuild/giflib-5.1.4/lib/: dgif_lib.c  egif_lib.c  gif_hash.c  gif_hash.h  gif_lib.h
prebuild/ilmbase-2.2.0/Iex/: CMakeLists.txt
prebuild/ilmbase-2.2.0/IexMath/: CMakeLists.txt
prebuild/imgui-master/: CMakeLists.txt  imgui.h
prebuild/jpeg-9a/: .gitignore  CMakeLists.txt  jconfig.cfg  jerror.c  jmorecfg.h
prebuild/libxml2-2.9.2/: CMakeLists.txt
prebuild/libxml2-2.9.2/include/libxml/: xmlversion.h
prebuild/libxml2-2.9.2/ndk/: config.h
prebuild/lua-5.2.3/: CMakeLists.txt
prebuild/lua-5.2.3/src/: llex.c
prebuild/minizip/: CMakeLists.txt
prebuild/nvidia-texture-tools/gnuwin32/: CMakeLists.txt
prebuild/openexr-2.2.0/IlmImfExamples/: CMakeLists.txt
prebuild/openexr-2.2.0/IlmImfFuzzTest/: CMakeLists.txt
prebuild/openexr-2.2.0/IlmImfTest/: CMakeLists.txt
prebuild/openexr-2.2.0/IlmImfUtil/: CMakeLists.txt
prebuild/openexr-2.2.0/IlmImfUtilTest/: CMakeLists.txt
prebuild/openexr-2.2.0/exrenvmap/: CMakeLists.txt
prebuild/openexr-2.2.0/exrheader/: CMakeLists.txt
prebuild/openexr-2.2.0/exrmakepreview/: CMakeLists.txt
prebuild/openexr-2.2.0/exrmaketiled/: CMakeLists.txt
prebuild/openexr-2.2.0/exrmultipart/: CMakeLists.txt
prebuild/openexr-2.2.0/exrmultiview/: CMakeLists.txt
prebuild/openexr-2.2.0/exrstdattr/: CMakeLists.txt
prebuild/sqlite-amalgamation-3100200/: CMakeLists.txt  sqlite3.def
prebuild/sqlite-amalgamation-3360000/: CMakeLists.txt  sqlite3.def
prebuild/tiff-4.0.3/: CMakeLists.txt
prebuild/tiff-4.0.3/libtiff/: .gitignore  tif_config.emcc.h  tif_config.mingw.h  tif_config.nc.h  tif_config.ndk.h  tif_config.unix.h  tiffconf.emcc.h  tiffconf.mingw.h  tiffconf.nc.h  tiffconf.unix.h
projects/test_native/: CMakeLists.txt
projects/test_native/CMakeModules/: FindWOSG.cmake
projects/test_native/src/: CMakeLists.txt  hello.cpp  main.cpp  myNativeApp.h
projects/test_thread/: CMakeLists.txt
projects/test_thread/example/: CMakeLists.txt  main.cpp
(+1795 files in other folders)
